--- a/microservices/serviceA/src/main/resources/templates/greeting.html
+++ b/microservices/serviceA/src/main/resources/templates/greeting.html
@@ -17,6 +17,11 @@
     <div class="starter-template">
         <h1>Welcome to Service A</h1>
     </div>
+
+    <div class="starter-template">
+        <h3>IP of server:</h3>
+        <h3 th:text=${ip}></h3>
+    </div>
     <iframe src="https://giphy.com/embed/xT77XWum9yH7zNkFW0" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/9jumpin-wow-nice-well-done-xT77XWum9yH7zNkFW0" >via GIPHY</a></p>
 
 </main>
